--- a/day03/em-rem-olcuBirimleri2.html
+++ b/day03/em-rem-olcuBirimleri2.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      html {
+        font-size: 1vw;
+      }
+
       .kutu1 {
-        font-size: 10px;
+        font-size: 1rem;
       }
       .kutu2 {
-        font-size: 30px;
+        font-size: 3rem;
       }
       .kutu3 {
-        font-size: 70px;
+        font-size: 7rem;
       }
       p {
-        font-size: 2rem;
+        font-size: 3rem;
       }
     </style>
   </head>
