--- a/day03/viewport-olcuBirimleri.html
+++ b/day03/viewport-olcuBirimleri.html
@@ -7,23 +7,24 @@
     <title>Document</title>
     <style>
       .parent {
-        /*width: 50vw;
-        height: 30vh;*/
+        width: 50vw;
+        height: 30vh;
         background-color: aqua;
       }
+
       .kutu1 {
-        width: 20vw;
-        height: 20vh;
+        width: 50%;
+        height: 50%;
         background-color: coral;
       }
       .kutu2 {
-        width: 20vw;
-        height: 20vh;
+        width: 20%;
+        height: 20%;
         background-color: crimson;
       }
       .kutu3 {
-        width: 20vw;
-        height: 20vh;
+        width: 30%;
+        height: 30%;
         background-color: lightgray;
       }
     </style>
@@ -33,6 +34,7 @@
       <div class="kutu1"></div>
     </div>
     <hr />
+
     <div class="parent">
       <div class="kutu2"></div>
     </div>
