--- a/day03/px-olcuBirimleri.html
+++ b/day03/px-olcuBirimleri.html
@@ -6,38 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .parent {
-        width: 50vw;
-        height: 30vh;
-        background-color: aqua;
-      }
       .kutu1 {
-        width: 50%;
-        height: 50%;
+        width: 50px;
+        height: 50px;
         background-color: coral;
       }
       .kutu2 {
-        width: 20%;
-        height: 20%;
+        width: 200px;
+        height: 200px;
         background-color: crimson;
       }
       .kutu3 {
-        width: 30%;
-        height: 30%;
+        width: 300px;
+        height: 300px;
         background-color: lightgray;
       }
     </style>
   </head>
   <body>
-    <div class="parent">
+    <div>
       <div class="kutu1"></div>
     </div>
-    <hr />
-    <div class="parent">
+    <div>
       <div class="kutu2"></div>
     </div>
-    <hr />
-    <div class="parent">
+    <div>
       <div class="kutu3"></div>
     </div>
   </body>
