--- a/day03/rem-olcuBirimleri.html
+++ b/day03/rem-olcuBirimleri.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      /*  html {
+        font-size: 70px;
+      } */
+
       .kutu1 {
         font-size: 10px;
       }
@@ -16,7 +20,7 @@
         font-size: 70px;
       }
       p {
-        font-size: 1em;
+        font-size: 1rem;
       }
     </style>
   </head>
