--- a/day04/01-padding-margin.html
+++ b/day04/01-padding-margin.html
@@ -18,9 +18,13 @@
       }
       .about {
         background-color: yellowgreen;
-        margin: 1rem;
+        margin-top: 1rem; /* sadece üsttende boşluk verebiliriz */
         padding: 2rem;
         text-align: justify;
+      }
+      /* inline elemanlar sadece yatayda padding ve margin alır */
+      .mollita {
+        margin: 3rem;
       }
     </style>
   </head>
@@ -34,14 +38,15 @@
       eveniet ex vitae doloremque ab labore, nisi obcaecati! Optio alias minima
       fuga est eius magnam harum nostrum voluptate itaque! Eum assumenda nemo
       incidunt deleniti eos animi voluptatem consectetur quidem aperiam adipisci
-      soluta rerum explicabo mollitia eius magnam iure nam, est ratione,
-      quibusdam, libero et quis quisquam repellendus laudantium. Cum. Molestias,
-      soluta quo recusandae expedita tempora amet ipsam ratione minus aliquid
-      iusto laborum esse. Ipsum quae similique rerum, iste odio excepturi
-      ducimus, asperiores perspiciatis alias debitis a, sequi laudantium
-      numquam? Eaque explicabo, rem temporibus at aut hic est mollitia! Ducimus,
-      repellat et rerum ab soluta expedita, ex placeat esse sequi suscipit sunt
-      necessitatibus possimus sapiente temporibus alias facere numquam nulla.
+      soluta rerum explicabo <b class="mollita">mollitia eius</b> magnam iure
+      nam, est ratione, quibusdam, libero et quis quisquam repellendus
+      laudantium. Cum. Molestias, soluta quo recusandae expedita tempora amet
+      ipsam ratione minus aliquid iusto laborum esse. Ipsum quae similique
+      rerum, iste odio excepturi ducimus, asperiores perspiciatis alias debitis
+      a, sequi laudantium numquam? Eaque explicabo, rem temporibus at aut hic
+      est mollitia! Ducimus, repellat et rerum ab soluta expedita, ex placeat
+      esse sequi suscipit sunt necessitatibus possimus sapiente temporibus alias
+      facere numquam nulla.
     </p>
   </body>
 </html>
