--- a/CSS Advance/day02/googleFonts.html
+++ b/CSS Advance/day02/googleFonts.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../assets/css/googleFonts.css" />
+    <link rel="stylesheet" href="../../assets/css/googleFonts.css" />
   </head>
   <body>
     <p>
