--- a/CSS Advance/day06/13-practice.html
+++ b/CSS Advance/day06/13-practice.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/13-practice.css" />
+    <link rel="stylesheet" href="../../assets/css/13-practice.css" />
   </head>
   <body>
     <label for="chk-mode" class="lbl-mode">Mode</label>
