--- a/CSS Advance/day09/sticky-fixed.html
+++ b/CSS Advance/day09/sticky-fixed.html
@@ -18,6 +18,11 @@
       article {
         margin-bottom: 2rem;
       }
+      .featured {
+        position: sticky;
+        top: 1rem;
+        background-color: aquamarine;
+      }
     </style>
   </head>
   <body>
@@ -35,7 +40,7 @@
       Assumenda est similique necessitatibus at voluptatibus molestiae ad veniam
       animi.
     </article>
-    <article>
+    <article class="featured">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
       adipisci perspiciatis. Placeat voluptatum eligendi tenetur dolores
       nesciunt consequuntur ad corporis. Architecto eaque ex atque labore
