--- a/CSS Advance/day10/shadow-practice.html
+++ b/CSS Advance/day10/shadow-practice.html
@@ -27,10 +27,18 @@
       .container div:nth-child(3) {
         box-shadow: 0 0 15px rgb(72, 182, 233);
       }
+      .container div:nth-child(4) {
+        border: 1px solid rgb(202, 202, 202);
+        transition: box-shadow 1s;
+      }
+      .container div:nth-child(4):hover {
+        box-shadow: -10px 0 15px rgb(36, 212, 95);
+      }
     </style>
   </head>
   <body>
     <div class="container">
+      <div></div>
       <div></div>
       <div></div>
       <div></div>
