--- a/CSSPractice/day05/practice-18.html
+++ b/CSSPractice/day05/practice-18.html
@@ -37,7 +37,7 @@
     </div>
     <h2>BAŞLIK</h2>
     <div class="content">
-      <img src="../assets/img/market.jpg" alt="Market" width="300px" />
+      <img src="../../assets/img/market.jpg" alt="Market" width="300px" />
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim,
         voluptas. Ullam excepturi laudantium fugit hic eum sint reiciendis,
